# tinyplayer

./: README.md  gen_proj.sh
examples/ios/TinyPlayerDemo/TinyPlayerDemo/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
examples/ios/TinyPlayerDemo/TinyPlayerDemo.xcodeproj/: project.pbxproj
libs/include/libavcodec/: avcodec.h
libs/include/libavformat/: avformat.h
libs/include/libavutil/: ffversion.h
src/: CMakeLists.txt  ios.cmake
src/core/: audio_render.cpp  audio_render.hpp  decoder.cpp  decoder.hpp  frame.cpp  frame.hpp  platform.hpp  player_view.hpp  tiny_player.cpp  tiny_player.hpp  utils.cpp  utils.hpp  video_render.cpp  video_render.hpp
src/platform/ios/audio/: audio_unit_render.hpp  audio_unit_render.mm
src/platform/ios/egl/: TinyPlayerView.h  TinyPlayerView.mm
